multiple GPU DtoH & HtoD memcpy

--- a/src/01_memcpy/CMakeLists.txt
+++ b/src/01_memcpy/CMakeLists.txt
@@ -3,4 +3,4 @@ add_executable(single_gpu single_gpu.cu)
 add_executable(multiple_gpu multiple_gpu.cu)
 
 target_link_libraries(single_gpu nvToolsExt)
-target_link_libraries(multiple_gpu nvToolsExt cutensor cutensorMg)
+target_link_libraries(multiple_gpu nvToolsExt mpi mpi_cxx)
