--- a/pixi.toml
+++ b/pixi.toml
@@ -18,6 +18,7 @@ numpy = ">=1.26.3,<1.27"
 cmake = ">=3.28.1,<3.29"
 nccl = ">=2.19.4.1,<2.19.5"
 cutensor = ">=2.0.0,<2.1"
+openmpi = ">=5.0.1,<5.1"
 
 [pypi-dependencies]
 cupy-cuda12x = "*"
